--- a/public/translations/en.json
+++ b/public/translations/en.json
@@ -18,7 +18,8 @@
       "title": "Scenes",
       "first": "Guri organize your stories into sequential scenes. Each scene is directly mapped with a paragraph in your description as soon as you specify the scene length.",
       "second": "You can create as many scenes as you want but don't forget about to set the duration in seconds.",
-      "third": "Now that you know how to create scenes, let's see what kind of element you can add to your scenes:"
+      "third": "Now that you know how to create scenes, let's see what kind of element you can add to your scenes:",
+      "preview": "This is my first scene. It lasts 4 seconds, has a skyblue background and shows a text saying \"This is the first scene\"\n\nThis paragraph is never interpreted because I'm not specifying the duration. This paragraphs can be used for talking about different parts of your story without generating scenes.\n\nThe last scene lasts 10 seconds and has just a text saying \"The End!\"."
     },
     "entities": {
       "title": "Entities",
@@ -29,51 +30,72 @@
       "attributes": "Attributes",
       "required": "required",
       "optional": "optional",
-      "example": "Example"
+      "example": "Example",
+      "preview": "I want my scene to last 30 seconds and to have a pink background and a picture of a pokemon (why not?) located at https://gurivr.s3.amazonaws.com/c5155f5b-83eb-4729-873b-238abb916362-psyduck.png to my left, and make it tiny please. Also add a text saying \"Look to your leeeeeeeft!\""
     },
     "audio": {
       "title": "Audio",
-      "description": "Audio source in the 3d space. It can be positioned in different parts of the scene. It needs a url as the source, the prefered format is mp3."
+      "description": "Audio source in the 3d space. It can be positioned in different parts of the scene. It needs a url as the source, the prefered format is mp3.",
+      "preview": "I want a 5 seconds scene showing a text saying \"Hi!\"\n\nThen I want a 40 seconds scene with a white background and an audio located at https://gurivr.s3.amazonaws.com/86474203-6d3d-4d39-9342-5ed63dca56c6-santa.mp3 behind me",
+      "keywords": "audio | sound"
     },
     "panorama": {
       "title": "Panorama",
-      "description": "360 spherical image envolving the user view. It needs a url to display. It works better with equirectangular panoramas but works with any kind of images."
+      "description": "360 spherical image envolving the user view. It needs a url to display. It works better with equirectangular panoramas but works with any kind of images.",
+      "preview": "My scene is 500 seconds long and shows a panorama located at https://gurivr.s3.amazonaws.com/7ec6043a-3924-4341-96ab-e8df10faaa93-pa.jpg"
     },
     "videosphere": {
       "title": "Videosphere",
-      "description": "360 spherical video envolving the user view. It needs a url to display. It works better with equirectangular videos but works with any kind of video."
+      "description": "360 spherical video envolving the user view. It needs a url to display. It works better with equirectangular videos but works with any kind of video.",
+      "preview": "My scene is 30 seconds long and shows a videosphere located at https://ucarecdn.com/bcece0a8-86ce-460e-856b-40dac4875f15/ and a voiceover saying \"This is the future. I know, is not that good\"",
+      "keywords": "videosphere"
     },
     "image": {
       "title": "Image",
-      "description": "2d images can be located inside the scene and placed in different positions."
+      "description": "2d images can be located inside the scene and placed in different positions.",
+      "keywords": "image | picture",
+      "preview": "My scene is 500 seconds long, it has blue background, a voiceover saying \"Look to your right\" and a random picture of a cat from https://gurivr.s3.amazonaws.com/7944cde7-b842-483f-a8b1-f953476b2cbb-gatito.png to my right"
     },
     "video": {
       "title": "Video",
-      "description": "2d videos can be located inside the scene and placed in different positions."
+      "description": "2d videos can be located inside the scene and placed in different positions.",
+      "preview": "My scene is 500 seconds long, it has skyblue background and a video from https://s3.amazonaws.com/gurivr/licha.mp4 to my left"
     },
     "text": {
       "title": "Text",
-      "description": "You can write text and it will be displayed into the screen. There is no color or font support (it's just blank text for now)"
+      "description": "You can write text and it will be displayed into the screen. There is no color or font support (it's just blank text for now)",
+      "keywords": "text",
+      "preview": "My scene is 500 seconds long, it has red background, a text telling me \"You can read\" and another text that says \"Say no more\" to my left"
     },
     "duration": {
       "title": "Duration",
-      "description": "You need to specify the duration of each scene in seconds. Otherwise it won't be displayed."
+      "description": "You need to specify the duration of each scene in seconds. Otherwise it won't be displayed.",
+      "keywords": "seconds",
+      "preview": "My scene is 8 seconds long, it has blue background and text saying \"This will finish soon\""
     },
     "voiceover": {
       "title": "Voiceover",
-      "description": "You can make your computer say phrases out loud. This will only work on browsers supporting speech synthesis."
+      "description": "You can make your computer say phrases out loud. This will only work on browsers supporting speech synthesis.",
+      "keywords": "voiceover",
+      "preview": "My scene is 8 seconds long and have a voiceover saying \"If you are listening to me, your computer, then your browser supports speech synthesis.\""
     },
     "chart": {
       "title": "Chart",
-      "description": "Everything here is experimental but this feature really is. (In theory) you can create a chart on <a href='https://quartz.github.io/Chartbuilder/'>ChartBuilder</a>, drag the json into the editor (or host it by yourself), and GuriVR will render it as a 3d chart. Give it a chance and if it don't work please raise an <a href='https://github.com/opennewslabs/guri-vr/issues'>issue</a>."
+      "description": "Everything here is experimental but this feature really is. (In theory) you can create a chart on <a href='https://quartz.github.io/Chartbuilder/'>ChartBuilder</a>, drag the json into the editor (or host it by yourself), and GuriVR will render it as a 3d chart. Give it a chance and if it don't work please raise an <a href='https://github.com/opennewslabs/guri-vr/issues'>issue</a>.",
+      "keywords": "chart",
+      "preview": "My scene is 500 seconds long and have a #eee background and a chart from https://s3.amazonaws.com/gurivr/my-data.json in front of me"
     },
     "background": {
       "title": "Background",
-      "description": "You can change the boring black background on each scene with a cooler color."
+      "description": "You can change the boring black background on each scene with a cooler color.",
+      "keywords": "background",
+      "preview": "My scene is 500 seconds long and have a #ccc background and a text saying \"Calaaaar\""
     },
     "3dmodel": {
       "title": "3D Models",
-      "description": "Another <del>broken</del> experimental feature. You can insert Collada models into the scene."
+      "description": "Another <del>broken</del> experimental feature. You can insert Collada models into the scene.",
+      "keywords": "model",
+      "preview": "My scene is 500 seconds long, has skyblue background and a model of some trees from https://s3.amazonaws.com/gurivr/23f1972f-99c6-4f68-a0f0-392c16a02333-trees.dae you can move around with wasd 😎"
     },
     "sharing": {
       "title": "Sharing",
@@ -94,7 +116,8 @@
       "create": "Create a story"
     },
     "preview": {
-      "title": "Use your own words"
+      "title": "Use your own words",
+      "text": "You not need to be a coder to create VR experiences. The GuriVR editor interprets your words and creates the world you described.\n\nTry adding some scenes. For example my first scene will last 500 seconds and display an image located at https://s3.amazonaws.com/gurivr/logo.svg along with a text saying: \"Guri is cool!\" to my left and a panorama located at https://s3.amazonaws.com/gurivr/pano.jpg\n\nTry adding more scenes\n\nhint: Try with words like audio, panorama, text, videosphere, voiceover and chart.\n\nYou can also drag your files into the editor and get back a url 🙀"
     },
     "share": {
       "title": "Share it everywhere",
@@ -115,7 +138,9 @@
     "title": "title",
     "save": "Save",
     "share": "Share link",
-    "preview": "Fullscreen preview"
+    "preview": "Fullscreen preview",
+    "initial_title": "Untitled story",
+    "initial_text": "\n\nThis is the GuriVR editor 🎉. You can create your VR experience by describing how you would like it to be. Every paragraph will be a scene as soon as you mention the duration. Let's start with an example:\n\nMy first scene lasts 5 seconds and has a text that says \"This is my first scene. This is amazing!\".\n\nThe second is 30 seconds and have just a panorama located at https://ucarecdn.com/8e6da182-c794-4692-861d-d43da2fd5507/ along with the audio https://ucarecdn.com/49f6a82b-30fc-4ab9-80b5-85f286d67830/\n\nhint: Try with words like audio, panorama, text, videosphere, voiceover and chart.\n\nYou can also drag your files into the editor and get back a url 🙀"
   },
   "stories": {
     "delete_confirm": "Are you sure you want to delete this story?",
