--- a/public/translations/es.json
+++ b/public/translations/es.json
@@ -18,7 +18,9 @@
       "title": "Escenas",
       "first": "Guri organiza tus historias en escenas secuenciales. Cada escena mapea directamente con un párrafo en tu descripción siempre y cuando especifiques la duración de la misma.",
       "second": "Podés crear cuantas escenas quieras pero nunca te olvides de especificar la duración en segundos de cada una de ellas.",
-      "third": "Ahora que sabes como crear escenas, veamos que tipo de elementos podes agregar a tus escenas:"
+      "third": "Ahora que sabes como crear escenas, veamos que tipo de elementos podes agregar a tus escenas:",
+      "preview": "Esta es mi primera escena. dura 4 segundos, tiene un fondo #87ceeb (eso es celeste en hexa) y muestra un texto que dice \"Esta es la primera escena\"\n\nEste párrafo nunca es interpretado porque no estoy sugiriendo una duración. Este párrafo puede ser usado para describir la historia sin agregar elementos a la escena de RV.\n\nLa última escena dura 10 segundos y tiene un texto que dice \"Fin!\"."
+
     },
     "entities": {
       "title": "Entidades",
@@ -29,51 +31,72 @@
       "attributes": "Atributos",
       "required": "requerido",
       "optional": "opcional",
-      "example": "Ejemplo"
+      "example": "Ejemplo",
+      "preview": "Quiero que mi escena dure 30 segundos y tenga un fondo #ffc0cb (rosa) y una foto de un pokemon (por qué no?) https://gurivr.s3.amazonaws.com/c5155f5b-83eb-4729-873b-238abb916362-psyduck.png a mi izquierda, y hacelo pequeño por favor. Además agregá un texto que diga \"mira a tu izquieeeeerda!\""
     },
     "audio": {
       "title": "Audio",
-      "description": "Fuente de audio en el espacio 3D. Puede ser posicionado en distintas partes de la escena. Necesita una url como fuente, el formato preferido es mp3."
+      "description": "Fuente de audio en el espacio 3D. Puede ser posicionado en distintas partes de la escena. Necesita una url como fuente, el formato preferido es mp3.",
+      "preview": "Quiero una escena de 5 segundos con el texto \"Hola manola!\"\n\nDespués quiero una escena de 40 segundos con fondo #fff (blanco) y un audio alojado en https://gurivr.s3.amazonaws.com/86474203-6d3d-4d39-9342-5ed63dca56c6-santa.mp3 atrás mio",
+      "keywords": "audio"
     },
     "panorama": {
       "title": "Panorama",
-      "description": "Imagen esférica que envuelve la vista del usuario. Necesita una url de fuente. Funciona mejor con panoramas equirectangulares pero funciona con cualquier tipo de imagen."
+      "description": "Imagen esférica que envuelve la vista del usuario. Necesita una url de fuente. Funciona mejor con panoramas equirectangulares pero funciona con cualquier tipo de imagen.",
+      "preview": "Mi escena dura 500 segundos y muestra un panorama alojado en https://gurivr.s3.amazonaws.com/7ec6043a-3924-4341-96ab-e8df10faaa93-pa.jpg"
     },
     "videosphere": {
-      "title": "Videoesféra",
-      "description": "Video esférico que envuelve la vista del usuario. Necesita una url de fuente. Funciona mejor con videos equirectangulares pero funciona con cualquier tipo de video."
+      "title": "Video esfera",
+      "description": "Video esférico que envuelve la vista del usuario. Necesita una url de fuente. Funciona mejor con videos equirectangulares pero funciona con cualquier tipo de video.",
+      "preview": "Mi escena dura 30 segundos y muestra una video esfera alojada en https://ucarecdn.com/bcece0a8-86ce-460e-856b-40dac4875f15/ y una voz en off que dice \"Este es el futuro. Ya se, no es tan bueno\"",
+      "keywords": "video esfera"
     },
     "image": {
       "title": "Imagen",
-      "description": "Imagen 2d que puede ser localizada dentro de la escena en distintas posiciones."
+      "description": "Imagen 2d que puede ser localizada dentro de la escena en distintas posiciones.",
+      "keywords": "foto",
+      "preview": "Mi escena dura 500 segundos, tiene fondo #0000ff (azul), una voz en off que dice \"mirá a tu derecha\" y una foto de un gatito https://gurivr.s3.amazonaws.com/7944cde7-b842-483f-a8b1-f953476b2cbb-gatito.png a mi derecha"
     },
     "video": {
       "title": "Video",
-      "description": "Video 2d que puede ser localizado en distintas posiciones dentro de la escena."
+      "description": "Video 2d que puede ser localizado en distintas posiciones dentro de la escena.",
+      "preview": "Mi escena dura 500 segundos, tiene un fondo #87ceeb y un video video de https://s3.amazonaws.com/gurivr/licha.mp4 a mi izquierda"
     },
     "text": {
       "title": "Texto",
-      "description": "Podés escribir texto y va a ser ubicado dentro de la pantalla. No hay soporte de color ni texto por ahora."
+      "description": "Podés escribir texto y va a ser ubicado dentro de la pantalla. No hay soporte de color ni texto por ahora.",
+      "keywords": "texto",
+      "preview": "Mi escena dura 500 segundos, tiene fondo #f00 (rojo), un texto que me dice \"podes leer esto\" y otro que dice \"Say no more\" a mi izquierda"
     },
     "duration": {
       "title": "Duración",
-      "description": "Es necesario especificar la duración de cada escena en segundos. De otro modo la escena no es tomada en cuenta."
+      "description": "Es necesario especificar la duración de cada escena en segundos. De otro modo la escena no es tomada en cuenta.",
+      "keywords": "segundos",
+      "preview": "Mi escena dura 8 segundos, tiene un fondo #00f y un texto que dice \"Esto se termina pronto\""
     },
     "voiceover": {
       "title": "Voz en off",
-      "description": "Podés hacer que la computadora diga frases en voz alta. Esta funcionalidad solo anda en navegadores que soportan síntesis de voz."
+      "description": "Podés hacer que la computadora diga frases en voz alta. Esta funcionalidad solo anda en navegadores que soportan síntesis de voz.",
+      "keywords": "voz en off",
+      "preview": "Mi escena dura 8 segundos y tiene una voz en off que dice \"Si me estás escuchando a mi, tu computadora, entonces tu computadora soporta síntesis de voz.\""
     },
     "chart": {
       "title": "Gráfico",
-      "description": "Toda funcionalidad acá es experimental pero esta lo es en serio. (En teoría) podés crear un gráfico en <a href='https://quartz.github.io/Chartbuilder/'>ChartBuilder</a>, arrastrar el json en el editor (o hostearlo por tu cuenta), y GuriVR va a dibujarlo como un gráfico 3D. Probalo y si no funciona <a href='https://github.com/opennewslabs/guri-vr/issues'>reportalo</a>."
+      "description": "Toda funcionalidad acá es experimental pero esta lo es en serio. (En teoría) podés crear un gráfico en <a href='https://quartz.github.io/Chartbuilder/'>ChartBuilder</a>, arrastrar el json en el editor (o hostearlo por tu cuenta), y GuriVR va a dibujarlo como un gráfico 3D. Probalo y si no funciona <a href='https://github.com/opennewslabs/guri-vr/issues'>reportalo</a>.",
+      "keywords": "gráfico",
+      "preview": "Mi escena dura 500 segundos, tiene un fondo #eee y un gráfico de https://s3.amazonaws.com/gurivr/my-data.json frente a mi"
     },
     "background": {
       "title": "Fondo",
-      "description": "Podés cambiar el fondo negro aburrido en cada escena por un color más lindo."
+      "description": "Podés cambiar el fondo negro aburrido en cada escena por un color más lindo.",
+      "keywords": "fondo",
+      "preview": "Mi escena dura 500 segundos y tiene un fondo #ccc con un texto que dice \"Calaaaar\""
     },
     "3dmodel": {
       "title": "Modelos 3D",
-      "description": "Otra funcionalidad <del>rota</del> experimental. Podés insertar modelos de Collada (.cae) en las escenas."
+      "description": "Otra funcionalidad <del>rota</del> experimental. Podés insertar modelos de Collada (.cae) en las escenas.",
+      "keywords": "modelo",
+      "preview": "My escena dura 500 segundos, tiene un fondo #87ceeb y un modelo de un bosque de https://s3.amazonaws.com/gurivr/23f1972f-99c6-4f68-a0f0-392c16a02333-trees.dae podes moverte usando las teclas wasd 😎"
     },
     "sharing": {
       "title": "Compartiendo",
@@ -94,7 +117,8 @@
       "create": "Creá una historia"
     },
     "preview": {
-      "title": "Usá tus propias palabras"
+      "title": "Usá tus propias palabras",
+      "text": "No necesitás ser un programador para crear historias con Realidad Virtual. El editor de GuriVR interpreta tus palabras y crea el mundo que describiste.\n\nIntentá creando algunas escenas. Por ejemplo mi primera escena dura 500 segundos y muestra una foto alojada en https://s3.amazonaws.com/gurivr/logo.svg con un texto que dice: \"Guri es genial!\" a mi izquierda y un panorama de https://s3.amazonaws.com/gurivr/pano.jpg\n\nAgregá más escenas!\n\nayuda: Probá usando términos como audio, panorama, texto, video esfera, voz en off o modelo.\n\nTambién podés arrastrar archivos en el editor y obtener las urls directamente 🙀"
     },
     "share": {
       "title": "Compartilo en todas partes",
@@ -115,7 +139,9 @@
     "title": "título",
     "save": "Guardar",
     "share": "Link para compartir",
-    "preview": "Previsualizar"
+    "preview": "Previsualizar",
+    "initial_title": "Historia sin título",
+    "initial_text": "\n\nEste es el editor de GuriVR 🎉. Podés crear tu experiencia de Realidad Virtual describiendo como querés que sea con palabras. Cada párrafo se va a convertir en una escena siempre y cuando anuncies su duración. Empecemos con un ejemplo:\n\nMi primera escena dura 5 segundos y tiene un texto que dice \"Esta es mi primera escena. Esto es increible!\".\n\nLa segunda escena dura 30 segundos y tiene un panorama https://ucarecdn.com/8e6da182-c794-4692-861d-d43da2fd5507/ y un audio https://ucarecdn.com/49f6a82b-30fc-4ab9-80b5-85f286d67830/\n\nayuda: Probá con términos como audio, panorama, texto, video esfera, voz en off y modelo.\n\nTambién podés arrastrar archivos al navegador y obtener la url 🙀"
   },
   "stories": {
     "delete_confirm": "Seguro querés borrar esta historia?",
