--- a/public/translations/es.json
+++ b/public/translations/es.json
@@ -66,7 +66,7 @@
       "title": "Texto",
       "description": "Podés escribir texto y va a ser ubicado dentro de la pantalla. No hay soporte de color ni texto por ahora.",
       "keywords": "texto",
-      "preview": "Mi escena dura 500 segundos, tiene fondo #f00 (rojo), un texto que me dice \"podes leer esto\" y otro que dice \"Say no more\" a mi izquierda"
+      "preview": "Mi escena dura 500 segundos, tiene fondo #f00 (rojo), un texto que me dice \"podes leer esto\" y otro texto que dice \"Say no more\" a mi izquierda"
     },
     "duration": {
       "title": "Duración",
