--- a/public/translations/es.json
+++ b/public/translations/es.json
@@ -94,7 +94,7 @@
     },
     "3dmodel": {
       "title": "Modelos 3D",
-      "description": "Otra funcionalidad <del>rota</del> experimental. Podés insertar modelos de Collada (.cae) en las escenas.",
+      "description": "Otra funcionalidad <del>rota</del> experimental. Podés insertar modelos de Collada (.cae), Obj y Bake en las escenas.",
       "keywords": "modelo",
       "preview": "My escena dura 500 segundos, tiene un fondo #87ceeb y un modelo de un bosque de https://s3.amazonaws.com/gurivr/23f1972f-99c6-4f68-a0f0-392c16a02333-trees.dae podes moverte usando las teclas wasd 😎"
     },
