--- a/public/translations/es.json
+++ b/public/translations/es.json
@@ -98,6 +98,11 @@
       "keywords": "modelo",
       "preview": "My escena dura 500 segundos, tiene un fondo #87ceeb y un modelo de un bosque de https://s3.amazonaws.com/gurivr/23f1972f-99c6-4f68-a0f0-392c16a02333-trees.dae podes moverte usando las teclas wasd 😎"
     },
+    "search": {
+      "title": "Búsqueda de recursos",
+      "description": "El editor te puede ayudar a obtener recursos de internet. En vez de pegar un archivo o un link en el editor, podés hacer una búsqueda por términos y obtener de vuelta una url. Esta característica funciona por ahora con panoramas e imagenes y puede ser usada simplemente encerrando la búsqueda entre comillas dobles (\").\nCuando busques un panorama va a ser buscado en el grupo equirectangular de Flickr y el resto de las imagenes desde Flickr en general.",
+      "example": "For example searching for \"soccer\" can result in https://farm6.staticflickr.com/5129/5335199935_b6d84f29e6_o.jpg"
+    },
     "ar": {
       "title": "Modo Realidad Aumentada",
       "description": "RV y RA tienen mucho en común. Podés usar la camara de tu usuario como fondo en vez de un video o un panorama. Para hacer esto hay que escribir \"modo ra\" en cualquier punto de la historia. Usualmente lo hacemos al comienzo de la historia para dejarlo en claro.",
